yarte/tests/fails/derive.rs
use yarte::Template;

#[derive(Template)]
#[template(source = "")]
struct Test;

fn main() {}
